--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                 </div>
               </div>
               <div class="card">
-                <img src="Screenshot_20240704_092509.png" alt="">
+                <img src="sundownpic.png" alt="">
                 <div class="cardbody">
                   <h3>SunDown Clone</h3>
                   <p class="pchange">This is a clone of Sun down studio made using html,css and JavaScript</p>
